WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146991
Web Inspector: [Mac] Save dialog not working when inspector is docked
https://bugs.webkit.org/show_bug.cgi?id=146991
Summary
Web Inspector: [Mac] Save dialog not working when inspector is docked
Joseph Pecoraro
Reported
2015-07-15 17:55:26 PDT
* SUMMARY [Mac] Save dialog not working when trying to save from text editor * STEPS TO REPRODUCE 1. Inspect a local test page with scripts 2. Dock inspector 3. Select a script 4. Modify the script 5. Hit ⌘S to present save dialog 6. Save in the dialog => save panel does not dismiss * NOTES - NSSavePanel/NSOpenPanel handlers expect non-null window argument, hanging is when they are given a null argument.
Attachments
[PATCH] Proposed Fix
(6.07 KB, patch)
2015-07-15 18:31 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-07-15 17:55:36 PDT
<
rdar://problem/21834578
>
Joseph Pecoraro
Comment 2
2015-07-15 18:31:46 PDT
Created
attachment 256885
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2015-07-15 18:33:04 PDT
Attachment 256885
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:350: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:713: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm:237: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm:625: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brian Burg
Comment 4
2015-07-16 09:28:22 PDT
Comment on
attachment 256885
[details]
[PATCH] Proposed Fix LGTM, would like Tim to take a peek though.
Joseph Pecoraro
Comment 5
2015-07-16 11:26:35 PDT
Will need at least a nod from a WK2 Owner.
WebKit Commit Bot
Comment 6
2015-07-16 17:30:18 PDT
Comment on
attachment 256885
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 256885 Committed
r186919
: <
http://trac.webkit.org/changeset/186919
>
WebKit Commit Bot
Comment 7
2015-07-16 17:30:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug