Web Inspector: [Mac] Save dialog not working when inspector is docked https://bugs.webkit.org/show_bug.cgi?id=146991

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-07-16
Reviewed by Sam Weinig.

Source/WebKit/mac:

* WebCoreSupport/WebInspectorClient.mm:
(WebInspectorFrontendClient::save):
(-[WebInspectorWindowController webView:runOpenPanelForFileButtonWithResultListener:allowMultipleFiles:]):
When the window is nil (docked) use a non-window version of running the dialog.

Source/WebKit2:

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::runOpenPanel):
(WebKit::WebInspectorProxy::platformSave):
When the window is nil (docked) use a non-window version of running the dialog.

Canonical link: https://commits.webkit.org/165082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186919 268f45cc-cd09-0410-ab3c-d52691b4dbfc